# gaspery

./: LICENSE  README.md  au-mic.ipynb  calculate_fim.ipynb  eprv-abstract.ipynb  example-correlated-noise.ipynb  example.ipynb  explore-gappy.ipynb  pyproject.toml  regimes.ipynb  requirements.txt  setup.py  strategies.ipynb
notebooks/: au-mic.ipynb  au-mic.py  eprv-abstract.ipynb  example-correlated-noise.ipynb  example.ipynb  stellar-parameters-paper.ipynb  stellar-parameters-varied.ipynb  stellar-parameters.ipynb
src/gaspery/: __init__.py  calculate_fi.py  strategies.py  utils.py
tutorials/: beat_frequencies.ipynb  companions.ipynb  comparison_to_fits.ipynb  comparison_to_fits.py  custom_kernels.ipynb  fixed_budget.ipynb  good_luck_dan.ipynb  min_observations.ipynb
tutorials/.ipynb_checkpoints/: min_observations-checkpoint.ipynb
