[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gaspery"
version = "0.2.2"
authors = [
  { name="Christopher Lam", email="c.lam@ufl.edu" },
]
description = "Fisher Information-based radial velocity observation scheduling"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cl3425/gaspery"
"Bug Tracker" = "https://github.com/cl3425/gaspery/issues"
